Remove initial test code
Improve readme.